# acctpass

./: .gitignore  Makefile  README.md  SECURITY.md  cli_test.go  clipboard.go  compatibility_test.go  crypto.go  go.mod  main.go  password.go  password_test.go  paths.go  paths_test.go  replace_unix.go  replace_windows.go  vault.go  vault_test.go
.github/workflows/: app-release.yml  ci.yml  release.yml
app/: README.md  index.html  package-lock.json  package.json
app-v2/: .gitignore  README.md  index.html  package-lock.json  package.json  tauri.v2.conf.json  tokens.css
app-v2/src/: App.css  App.tsx  main.tsx
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: crypto.rs  lib.rs  main.rs  vault.rs
assets/: demo.cast
compatibility/: vectors.json
site/: app.js  robots.txt  sitemap.xml  styles.css  tokens.css  v1-overrides.css  vercel.json
site/v1/: APP_PLAN.md  index.html
site/v2/: app.js  index.html  styles.css  tokens.css
