[package]
name = "acctpass-app"
version = "0.1.0"
description = "Offline deterministic password generator"
authors = ["Falcn8"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "acctpass_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
getrandom = "0.3"
hmac = "0.12"
sha2 = "0.10"
tempfile = "3"
zeroize = "1"
